Small CSS adjustment to fix an overlap issue in the Navbar.

--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,7 @@
 
 .main {
     display: flex;
+    min-height: 600px;
+
 }
 
