--- a/src/NavbarComponent/NavbarComponent.module.css
+++ b/src/NavbarComponent/NavbarComponent.module.css
@@ -26,7 +26,6 @@
     opacity: 1;
     position: absolute;
     border:1px solid var(--card-outline-color); 
-
 }
 
 .expanded {
@@ -39,12 +38,12 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    max-height: 60vh;
     font-weight: bold;
     color: white;
 
 
 }
+
 
 .expanded .allCheckboxesAndButtons {
     opacity: 1;
@@ -65,20 +64,17 @@
 }
 
 .allCheckboxesButton{
-    appearance: button;
     background-color: #1652F0;
     border: 1px solid #1652F0;
     border-radius: 4px;
     box-sizing: border-box;
     color: #FFFFFF;
     cursor: pointer;
-    font-family: Graphik,-apple-system,system-ui,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     font-size: 14px;
     font-weight: bold;
     line-height: 1.15;
     overflow: visible;
     padding: 12px 16px;
-    position: relative;
     text-align: center;
     text-transform: none;
     transition: all 80ms ease-in-out;
